# libhadwiger

./: .gitignore  CMakeLists.txt  README.md  YaGraphProgram.cpp  YaGraphProgram.h  YaGraphProgram.kdev4  graph.cpp  graph.h  main.cpp
.kdev4/: YaGraphProgram.kdev4
autotests/: CMakeLists.txt  graphtest.cpp  graphtest.h
libhadwiger/: CMakeLists.txt  graph.cpp  graph.h
